--- a/lighthouse.css
+++ b/lighthouse.css
@@ -1,68 +1,119 @@
-body {background-color: #00005d;
-	 font-family: Verdana, Arial, sans-serif;
-	 }
-header {background-color: #869dc7;
+body{
+	background-color: #00005d;
+	font-family: Verdana, Arial, sans-serif;
 }
-h1 {
-	}
-h2 {color: #869dc7;
+header{
+	background-color: #869dc7;
+	background-image: url(images/lighthousebanner.jpg);
+	background-repeat: no-repeat;
+	height: 150px;
+	margin-bottom: 0px;
+}
+h1{
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
+h2{
+	color: #869dc7;
 	font-family: Arial, sans-serif;
-	}
-footer {font-size: 70%;
-	  text-align: center;
-	  padding: 10px;
-	  background-color: #869dc7;
-	  clear: both;
-	  }
-#wrapper {margin: 0 auto;
-		 width: 80%;
-		 background-color: #b3c7e6;
-		 color: #000066;
-		 }
-nav { font-weight: bold;
-	 letter-spacing: 0.1em;
-	 }
-nav ul {list-style-type: none;
-	  }
+}
+h3{
+	margin-bottom: 0px;
+}
+footer{
+	font-size: 70%;
+	text-align: center;
+	padding: 10px;
+	background-color: #869dc7;
+	clear: both;
+}
+aside{
+	width: 200px;
+	background-color: #eaeaea;
+	padding: 20px;
+	font-size: 80%;
+	box-shadow: 5px 5px 5px #333333;
+	float: right;
+	position: relative;
+	top: -40px;
+	margin-right: 40px;
+}
+nav{
+	font-weight: bold;
+	letter-spacing: 0.1em;
+	float: right;
+	width: 200px;
+}
+nav ul{
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
 nav a{
-	  background-color: #b3c7e6;
-	  border-bottom: 1px solid #ffffff;
-	  }
-h3 {margin-bottom: 0px;}
-
-main {background-color: #ffffff;
-	 color: #000000;
-	 padding: 20px 20px;
-	 }
-main ul{list-style-type: none;}
+	background-color: #b3c7e6;
+	border-bottom: 1px solid #ffffff;
+	text-decoration: none;
+	padding: 20px;
+	display: block;
+}
+nav a:link{
+	color: #ffffff;
+}
+nav a:visited{
+	color: #ddd9d9;
+}
+nav a:hover{
+	color: #869dc7;
+	background-color: #ddd9d9;
+}
+main{
+	background-color: #ffffff;
+	color: #000000;
+	padding: 20px 20px;
+	overflow: auto;
+}
+main ul{
+	list-style-type: none;
+}
 main li{
-	  width: 225px;
-	  padding-bottom: 10px;
-	  margin: 10px;
-	  background-color: #eaeaea;
-	  text-align: center;
-	  font-style: italic;
-	  font-family: Georgia, serif;
-	}
-aside {
-	 width: 200px;
-	 background-color: #eaeaea;
-	 padding: 20px;
-	 font-size: 80%;
-	 box-shadow: 5px 5px 5px #333333;
-	 }
-article header {background-color: #ffffff;
-			background-image: none;
-			font-size: 90%;
-			padding-left: 0;
-			height: auto;
-			}
-#tagline {margin-top: 80px;
-		  padding-right: 20px;
-		  font-size: .80em;
-		  color: #00005D;
-		  text-align: right;
-		  font-style: italic;
-		  }
-#floatright {
-			 }
+	width: 225px;
+	padding-bottom: 10px;
+	margin: 10px;
+	background-color: #eaeaea;
+	text-align: center;
+	font-style: italic;
+	font-family: Georgia, serif;
+	display: inline-block;
+}
+main p{
+	position: relative;
+	left: 20px;
+}
+article header{
+	background-color: #ffffff;
+	background-image: none;
+	font-size: 90%;
+	padding-left: 0;
+	height: auto;
+}
+#wrapper{
+	margin: 0 auto;
+	width: 80%;
+	background-color: #b3c7e6;
+	color: #000066;
+	min-width: 960px;
+	max-width: 1200px;
+}
+#tagline{
+	margin-top: 80px;
+	padding-right: 20px;
+	font-size: .80em;
+	color: #00005D;
+	text-align: right;
+	font-style: italic;
+}
+#floatright{
+	float: right;
+	margin: 20px;
+}
